fixed issues and enabled dark theme

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,3 +2,8 @@
     font-family: 'SFProDisplay-BlackItalic';
     src: local('SFPro'), url(../fonts/SFProDisplay-BlackItalic.ttf) format('truetype');
 }
+
+.hide-scrollbar {
+	overflow: -moz-hidden-unscrollable;
+	overflow: hidden;
+}
